Adjustements based on feedback

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
   /* ARTS Brand Colors */
   --color-arts-navy: #0b1928;
   --color-arts-teal: #273543;
-  --color-arts-green: #9aff00;
+  --color-arts-green: #c0ff7e;
   --color-arts-lime: #c0ff7e;
   --color-arts-dark: #000000;
   --color-arts-gray: #cccccc;
